--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,14 @@
     <title>Lambda Notes</title>
 </head>
 <body>
-    <h1>I am working!</h1>
+    <header id="top-bar"> 
+        <div class="menu">
+
+        </div>
+        <button class="menu-button"></button>
+    </header>
+    <div class="main-container">
+        
+    </div>
 </body>
 </html>
