Add nav bar css

--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Lambda Notes</title>
 </head>
-<body>
-    <header id="top-bar"> 
-        <div class="menu">
+    <body>
+        <header id="top-bar"> 
+            <div class="menu">
 
+            </div>
+            <button class="menu-button">
+                <div class="hamburger-slice"></div>
+                <div class="hamburger-slice"></div>
+                <div class="hamburger-slice"></div>
+            </button>
+        </header>
+        <div class="main-container">
+            
         </div>
-        <button class="menu-button"></button>
-    </header>
-    <div class="main-container">
-        
-    </div>
-</body>
+    </body>
 </html>
