Start card carousel

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,11 @@
             </button>
         </header>
         <div class="main-container">
-            
+            <div class="carousel-cards">
+                <span class="left-arrow"></span>
+                <div class="carousel-wheel"></div>
+                <span class="right-arrow"></span>
+            </div>
         </div>
     </body>
 </html>
