Positioning for carousel

--- a/html/index.html
+++ b/html/index.html
@@ -19,9 +19,22 @@
         </header>
         <div class="main-container">
             <div class="carousel-cards">
-                <span class="left-arrow"></span>
-                <div class="carousel-wheel"></div>
-                <span class="right-arrow"></span>
+                    <svg class="left-arrow" width="20" height="95" viewBox="0 0 20 95" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18.4998 94L2.49994 47.5L18.4998 1" stroke="white" stroke-width="3"/>
+                    </svg>                        
+                <div class="carousel-wheel">
+                    <div class="unit-card">
+                        <img src="" alt="" class="header-img">
+                        <div class="description">
+                            <h2>Unit 1</h2>
+                            <p>Description of Unit 1</p>
+                            <span class="open-button">Open</span>
+                        </div>
+                    </div>
+                </div>
+                <svg class="right-arrow" width="20" height="95" viewBox="0 0 20 95" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.99997 94L17.9999 47.5L1.99997 1" stroke="white" stroke-width="3"/>
+                </svg>
             </div>
         </div>
     </body>
